# amazon-ynab

./: .copier-answers.autopretty.yml  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  paths.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: build.yml  combine-prs.yml  greetings.yml  install-rye.yml  pre-commit.yml
amazon_ynab/: __init__.py  __main__.py
amazon_ynab/amazon/: amazon_client.py  invoice_parser.py
amazon_ynab/engine/: engine.py  matcher.py  patcher.py
amazon_ynab/matcher/: matcher.py
amazon_ynab/paths/: common_paths.py  utils.py
amazon_ynab/utils/: custom_types.py  utils.py
amazon_ynab/words/: food_identifier.py  string_modifier.py
amazon_ynab/ynab/: ynab_client.py
dev-docs/: README.md
docker/: Dockerfile  README.md
tests/: test_main.py
tests/test_example/: test_hello.py
